# ql

./: .gitignore  App.hs  Readme.md  build.sh
auth/: Readme.md
auth-proxy/: Readme.md
ci/: Dockerfile  Readme.md
ci-slave/: Readme.md
jenkins-auth-proxy/: Dockerfile  auth.yaml  run.sh
ql/: Base.hs  Main.hs  Test.hs  build.sh  do-ci-stuff.sh  ql.cabal  stack.yaml  travis-new.sh  travis.sh
ql-prod/: Dockerfile
tmp/: Dockerfile  ci-slave.dockerfile
