name:                ql
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/rvion/ql#readme
license:             BSD3
license-file:        LICENSE
author:              rvion
maintainer:          vion.remi@gmail.com
copyright:           Rémi Vion 2016
category:            tool
build-type:          Simple
cabal-version:       >=1.10

executable ql
  main-is:             Main.hs
  other-modules:       Base
  default-language:    Haskell2010
  default-extensions:  DataKinds DeriveGeneric TypeOperators
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , wai-extra
                     , warp
                     , wai
                     , servant
                     , servant-lucid
                     , servant-swagger
                     , servant-js
                     , bytestring
                     , swagger2
                     , text
                     , servant-server
                     , transformers
                     , aeson
